--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -206,7 +206,7 @@ partial dictionary VideoEncoderEncodeOptions {
   </dd>
 </dl>
 
-VideoEncoderEncodeOptionsForAv1 {#av1-encode-options}
+VideoEncoderEncodeOptionsForAvc {#avc-encode-options}
 --------------------------------------
 <pre class='idl'>
 <xmp>
@@ -220,7 +220,7 @@ dictionary VideoEncoderEncodeOptionsForAvc {
   <dt><dfn dict-member for=VideoEncoderEncodeOptionsForAvc>quantizer</dfn></dt>
   <dd>
     Sets per-frame quantizer value.
-    In [[ITU-T-REC-H.264]] the quantizer threshold can be varied from 0 to 51
+    In [[ITU-T-REC-H.264]] the quantizer threshold can be varied from 0 to 51.
   </dd>
 </dl>
 
