--- a/index.src.html
+++ b/index.src.html
@@ -1764,7 +1764,12 @@ Run these steps:
     2. If `config[m]` is a nested dictionary, set `clone[m]` to the result of
         recursively running the <a>Clone Configuration</a> algorithm with
         `config[m]`.
-    3. Otherwise, assign the value of `config[m]` to `clone[m]`.
+    3. Otherwise, assign a copy of `config[m]` to `clone[m]`.
+
+Note: This implements a "deep-copy". Those configuration objects are
+frequently used as the input of asynchronous operations. Copying means that
+modifying the original object while the operation is in flight won't change the
+operation's outcome.
 
 
 Signalling Configuration Support{#config-support-info}
