Address review comment.

--- a/index.src.html
+++ b/index.src.html
@@ -1766,7 +1766,7 @@ Run these steps:
         `config[m]`.
     3. Otherwise, assign a copy of `config[m]` to `clone[m]`.
 
-Note: This implements a "deep-copy". Those configuration objects are
+Note: This implements a "deep-copy". These configuration objects are
 frequently used as the input of asynchronous operations. Copying means that
 modifying the original object while the operation is in flight won't change the
 operation's outcome.
