Replace RFC2119 wording in Security Connsiderations

--- a/index.src.html
+++ b/index.src.html
@@ -5596,7 +5596,7 @@ are provided and direct access to invoke the codec control methods. This also
 affords attackers the ability to invoke sequences of control methods that were
 not previously possible via the higher level APIs.
 
-User Agents <em class="rfc2119">SHOULD</em> mitigate this risk by extensively
+The Working Group expects User Agents to mitigate this risk by extensively
 fuzzing their implementation with random inputs and control method invocations.
 Additionally, User Agents are encouraged to isolate their underlying codecs in
 processes with restricted privileges (sandbox) as a barrier against successful
