Remove stable from codec registry requirements

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -1,7 +1,7 @@
 <pre class='metadata'>
 Title: WebCodecs Codec Registry
 Repository: w3c/webcodecs
-Status: NOTE-ED
+Status: DRY
 Shortname: webcodecs-codec-registry
 Level: none
 Group: mediawg
@@ -45,7 +45,7 @@ Registration Entry Requirements {#registration-entry-requirements}
 ==================================================================
 
 1. Each entry must include a unique codec string, a common name string, and a
-    link to a stable public specification.
+    link to a public specification.
 2. The codec string must be crafted as follows:
     1. If the codec string contains a fixed prefix with variable suffix values,
         the suffix must be represented by an asterisk and the registration's
