--- a/index.src.html
+++ b/index.src.html
@@ -2033,7 +2033,7 @@ dictionary AudioEncoderConfig {
   [EnforceRange] unsigned long sampleRate;
   [EnforceRange] unsigned long numberOfChannels;
   [EnforceRange] unsigned long long bitrate;
-  BitrateMode bitrateMode;
+  BitrateMode bitrateMode = "variable";
 };
 </xmp>
 
