--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -1,7 +1,7 @@
 <pre class='metadata'>
 Title: WebCodecs Codec Registry
 Repository: w3c/webcodecs
-Status: DRY
+Status: NOTE-ED
 Shortname: webcodecs-codec-registry
 Level: none
 Group: mediawg
