--- a/index.src.html
+++ b/index.src.html
@@ -9,6 +9,7 @@ Level: None
 Group: mediawg
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
+Editor: Eugene Zemtsov, w3cid 139375, Google LLC https://www.google.com/
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This specification defines interfaces to codecs for encoding and
